--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9373968f",
    "metadata": {},
    "outputs": [],
@@ -24,11 +24,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "42e6fad9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df=pd.read_csv(r\"D:\\Python Projects\\algeraian forest fires\\Algerian_forest_fires_Cleaned.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "269e1e62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day</th>\n",
+       "      <th>month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>RH</th>\n",
+       "      <th>Ws</th>\n",
+       "      <th>Rain</th>\n",
+       "      <th>FFMC</th>\n",
+       "      <th>DMC</th>\n",
+       "      <th>DC</th>\n",
+       "      <th>ISI</th>\n",
+       "      <th>BUI</th>\n",
+       "      <th>FWI</th>\n",
+       "      <th>Classes</th>\n",
+       "      <th>region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>29</td>\n",
+       "      <td>57</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>65.7</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>not fire</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>29</td>\n",
+       "      <td>61</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>64.4</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>not fire</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>26</td>\n",
+       "      <td>82</td>\n",
+       "      <td>22</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>47.1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>not fire</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>25</td>\n",
+       "      <td>89</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>28.6</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>not fire</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   day  month  year  Temperature  RH  Ws  Rain  FFMC  DMC   DC  ISI  BUI  FWI  \\\n",
+       "0    1      6  2012           29  57  18   0.0  65.7  3.4  7.6  1.3  3.4  0.5   \n",
+       "1    2      6  2012           29  61  13   1.3  64.4  4.1  7.6  1.0  3.9  0.4   \n",
+       "2    3      6  2012           26  82  22  13.1  47.1  2.5  7.1  0.3  2.7  0.1   \n",
+       "3    4      6  2012           25  89  13   2.5  28.6  1.3  6.9  0.0  1.7  0.0   \n",
+       "\n",
+       "       Classes  region  \n",
+       "0  not fire          0  \n",
+       "1  not fire          0  \n",
+       "2  not fire          0  \n",
+       "3  not fire          0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(4)"
+   ]
   }
  ],
  "metadata": {
