--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "9b073152",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "1be4cecf",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
        "1       0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "7f32c353",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "ade5ccdf",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "0bf1a4be",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "1           29  61  13   1.3  64.4  4.1  7.6  1.0  3.9  0.4        0       0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "6e98d2dd",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "b30b1562",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "0ba91401",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
        "1           29  61  13   1.3  64.4  4.1  7.6  1.0  3.9        0       0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "900d50e5",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "eab1aa33",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "((182, 11), (61, 11), (182,), (61,))"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "a5ad3cd6",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "2034bb5c",
    "metadata": {},
    "outputs": [],
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "9a85024b",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "7a34e210",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "b8fce926",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
        "((182, 9), (61, 9))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "c78e0aec",
    "metadata": {},
    "outputs": [],
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "5c124907",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "        -1.10431526, -0.98907071]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,12 +752,147 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9316c71",
+   "cell_type": "markdown",
+   "id": "61a64c81",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Implementing Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "dd965d6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error:  0.5468236465249978\n",
+      "R2_Score:  0.9847657384266951\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error,r2_score\n",
+    "LinearModel=LinearRegression()\n",
+    "LinearModel.fit(x_train,y_train)\n",
+    "y_pred=LinearModel.predict(x_test)\n",
+    "MAE=mean_absolute_error(y_test,y_pred)\n",
+    "score=r2_score(y_test,y_pred)\n",
+    "print(\"Mean Absolute Error: \",MAE)\n",
+    "print(\"R2_Score: \",score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0399046",
+   "metadata": {},
+   "source": [
+    "### Lasso Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b5ba137a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE:  1.133175994914409\n",
+      "R2 Score:  0.9492020263112388\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.metrics import mean_absolute_error,r2_score\n",
+    "lassomodel=Lasso()\n",
+    "lassomodel.fit(x_train,y_train)\n",
+    "y_pred=lassomodel.predict(x_test)\n",
+    "\n",
+    "MAE=mean_absolute_error(y_test,y_pred)\n",
+    "score=r2_score(y_test,y_pred)\n",
+    "print(\"MAE: \",MAE)\n",
+    "print(\"R2 Score: \",score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1dc5a56",
+   "metadata": {},
+   "source": [
+    "### Ridge Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2b793d90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE:  0.5642305340105715\n",
+      "R2 Score:  0.9842993364555512\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.metrics import mean_absolute_error,r2_score\n",
+    "ridge_model=Ridge()\n",
+    "ridge_model.fit(x_train,y_train)\n",
+    "y_pred=ridge_model.predict(x_test)\n",
+    "\n",
+    "MAE=mean_absolute_error(y_test,y_pred)\n",
+    "score=r2_score(y_test,y_pred)\n",
+    "print(\"MAE: \",MAE)\n",
+    "print(\"R2 Score: \",score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf811e71",
+   "metadata": {},
+   "source": [
+    "### ElasticNet Regression\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0e8234bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE:  1.8822353634896005\n",
+      "R2 Score:  0.8753460589519703\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import ElasticNet\n",
+    "from sklearn.metrics import mean_absolute_error,r2_score\n",
+    "elastic_model=ElasticNet()\n",
+    "elastic_model.fit(x_train,y_train)\n",
+    "y_pred=elastic_model.predict(x_test)\n",
+    "\n",
+    "MAE=mean_absolute_error(y_test,y_pred)\n",
+    "score=r2_score(y_test,y_pred)\n",
+    "print(\"MAE: \",MAE)\n",
+    "print(\"R2 Score: \",score)"
+   ]
   }
  ],
  "metadata": {
