--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9373968f",
    "metadata": {},
    "outputs": [],
@@ -24,17 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "42e6fad9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(r\"D:\\Python Projects\\algeraian forest fires\\Algerian_forest_fires_Cleaned.csv\")"
+    "df=pd.read_csv(r\"D:\\Python Projects\\algeraian forest fires\\datasets\\Algerian_forest_fires_Cleaned.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "269e1e62",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "3  not fire          0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9b073152",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1be4cecf",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
        "1       0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7f32c353",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ade5ccdf",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0bf1a4be",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "1           29  61  13   1.3  64.4  4.1  7.6  1.0  3.9  0.4        0       0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6e98d2dd",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b30b1562",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0ba91401",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
        "1           29  61  13   1.3  64.4  4.1  7.6  1.0  3.9        0       0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "900d50e5",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "eab1aa33",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "((182, 11), (61, 11), (182,), (61,))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a5ad3cd6",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "2034bb5c",
    "metadata": {},
    "outputs": [],
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "9a85024b",
    "metadata": {},
    "outputs": [],
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "7a34e210",
    "metadata": {},
    "outputs": [],
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "b8fce926",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
        "((182, 9), (61, 9))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "c78e0aec",
    "metadata": {},
    "outputs": [],
@@ -720,7 +720,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
+   "id": "8efdb7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(scaler,open(\"StandardScaler.pkl\",'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "5c124907",
    "metadata": {},
    "outputs": [
@@ -742,7 +753,7 @@
        "        -1.10431526, -0.98907071]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "dd965d6f",
    "metadata": {},
    "outputs": [
@@ -787,6 +798,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "377435a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "pickle.dump(LinearModel,open('LinearRegressor.pkl','wb'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a0399046",
    "metadata": {},
@@ -796,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "b5ba137a",
    "metadata": {},
    "outputs": [
@@ -823,6 +845,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a38f117e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(lassomodel,open('LassoRegressor.pkl','wb'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d1dc5a56",
    "metadata": {},
@@ -832,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "2b793d90",
    "metadata": {},
    "outputs": [
@@ -859,6 +891,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9b22f01f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(ridge_model,open('RidgeRegressor.pkl','wb'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf811e71",
    "metadata": {},
@@ -868,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "0e8234bd",
    "metadata": {},
    "outputs": [
@@ -895,6 +937,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "724eef4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(elastic_model,open(\"ElasticRegressor.pkl\",'wb'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "99811367",
    "metadata": {},
@@ -912,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "2d5a2223",
    "metadata": {},
    "outputs": [
@@ -1340,7 +1392,7 @@
        "LassoCV(cv=5)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "84b66a67",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1429,7 @@
        "        5.23034139])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "0e4fc342",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1450,7 @@
        "0.05725391318234408"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,27 +1461,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "19b2c28e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[53.64536329, 65.39074075, 54.89628985, 77.90299066, 39.38236846],\n",
+       "       [46.99139716, 59.81506814, 49.29840831, 75.6645852 , 35.31758355],\n",
+       "       [41.14908917, 53.9178721 , 42.49594889, 68.35708298, 31.76996123],\n",
+       "       [36.05788169, 48.41773965, 36.66879347, 61.92819453, 28.67296816],\n",
+       "       [31.62067285, 42.76466229, 31.68391904, 56.26841266, 24.93183295],\n",
+       "       [27.75285367, 37.81922812, 27.42599138, 51.28216115, 21.56888645],\n",
+       "       [24.3807738 , 33.49107651, 23.7950306 , 45.25481907, 18.66094162],\n",
+       "       [21.44052804, 29.70161639, 20.70460191, 39.90418045, 16.14837778],\n",
+       "       [18.876308  , 26.38208059, 18.07969934, 35.23429953, 13.97821475],\n",
+       "       [16.63960395, 23.47341883, 15.85530749, 31.15712074, 12.10483403],\n",
+       "       [14.68819307, 20.92329068, 13.97555108, 27.59649208, 10.48862803],\n",
+       "       [12.98525144, 18.68636627, 12.39173305, 24.48611006,  9.09521221],\n",
+       "       [11.49893734, 16.72312788, 11.06186319, 21.7677198 ,  7.89445038],\n",
+       "       [10.2013182 , 14.9991189 ,  9.94965275, 19.39216316,  6.86106557],\n",
+       "       [ 9.06814642, 13.48429046,  9.02375611, 17.31505177,  5.9722389 ],\n",
+       "       [ 8.0783105 , 12.15220147,  8.25686268, 15.49825178,  5.20846991],\n",
+       "       [ 7.21342796, 10.98048099,  7.62613185, 13.90854714,  4.5528438 ],\n",
+       "       [ 6.45749132,  9.94890861,  7.11117548, 12.51700172,  3.99069111],\n",
+       "       [ 5.79649781,  9.04007002,  6.69464754, 11.29840502,  3.50929245],\n",
+       "       [ 5.21843764,  8.23876281,  6.36161441, 10.23043133,  3.09746419],\n",
+       "       [ 4.71266457,  7.53171188,  6.09923004,  9.29470762,  2.74599653],\n",
+       "       [ 4.2699656 ,  6.90732196,  5.89645437,  8.47412971,  2.44641798],\n",
+       "       [ 3.88231419,  6.35546212,  5.74343167,  7.75415263,  2.19155766],\n",
+       "       [ 3.54271656,  5.86727817,  5.63280675,  7.1220963 ,  1.97520698],\n",
+       "       [ 3.24507798,  5.43490383,  5.55722342,  6.56690368,  1.79199187],\n",
+       "       [ 2.98408648,  5.05183908,  5.51072584,  6.07893135,  1.6372624 ],\n",
+       "       [ 2.75511169,  4.71201421,  5.48822878,  5.64976711,  1.50699679],\n",
+       "       [ 2.55407274,  4.41024533,  5.48539678,  5.27207134,  1.39771812],\n",
+       "       [ 2.37754224,  4.14199391,  5.49854058,  4.93929274,  1.30641528],\n",
+       "       [ 2.22240106,  3.90328437,  5.52452745,  4.64615961,  1.23051895],\n",
+       "       [ 2.08597116,  3.69063268,  5.56020979,  4.38761378,  1.16776797],\n",
+       "       [ 1.9659162 ,  3.50098406,  5.6043589 ,  4.15939166,  1.11623041],\n",
+       "       [ 1.86019735,  3.33165877,  5.65456906,  3.95776947,  1.07424081],\n",
+       "       [ 1.76703503,  3.18030479,  5.70925192,  3.77949324,  1.04036447],\n",
+       "       [ 1.6848755 ,  3.04481488,  5.76708269,  3.62171864,  1.01336643],\n",
+       "       [ 1.61236193,  2.92346604,  5.82695915,  3.48195856,  0.99218458],\n",
+       "       [ 1.54827557,  2.81461081,  5.88796931,  3.3580375 ,  0.97590638],\n",
+       "       [ 1.49165092,  2.71684484,  5.94936347,  3.24805179,  0.96383716],\n",
+       "       [ 1.44154595,  2.62893196,  6.01053016,  3.1503334 ,  0.95513053],\n",
+       "       [ 1.39716889,  2.54978296,  6.07039933,  3.07232371,  0.94929556],\n",
+       "       [ 1.35782745,  2.47843742,  6.12975718,  3.0041222 ,  0.94584218],\n",
+       "       [ 1.32291594,  2.41404782,  6.18769529,  2.94364011,  0.94435089],\n",
+       "       [ 1.29190414,  2.35586563,  6.24396657,  2.88962691,  0.94446421],\n",
+       "       [ 1.26432775,  2.30322922,  6.29839177,  2.84193587,  0.94587808],\n",
+       "       [ 1.23978001,  2.25555322,  6.35084178,  2.79951289,  0.94833447],\n",
+       "       [ 1.21631899,  2.21233117,  6.39529714,  2.76173546,  0.9516149 ],\n",
+       "       [ 1.18452807,  2.16000042,  6.42643862,  2.72805794,  0.95553494],\n",
+       "       [ 1.15701368,  2.11158527,  6.45636883,  2.69761451,  0.95595979],\n",
+       "       [ 1.13320995,  2.06862134,  6.48638494,  2.67077799,  0.93982106],\n",
+       "       [ 1.11260173,  2.03047905,  6.51570208,  2.6467804 ,  0.9267394 ],\n",
+       "       [ 1.09481028,  1.9965441 ,  6.54418839,  2.62528895,  0.92156967],\n",
+       "       [ 1.07943936,  1.96633625,  6.57175064,  2.60556754,  0.91819477],\n",
+       "       [ 1.06616655,  1.93941688,  6.60120289,  2.58826543,  0.91600498],\n",
+       "       [ 1.05471212,  1.91540122,  6.66074506,  2.53939631,  0.91492536],\n",
+       "       [ 1.04483316,  1.89395167,  6.72040081,  2.49354558,  0.91475751],\n",
+       "       [ 1.03631885,  1.87477186,  6.77985049,  2.45183158,  0.91533073],\n",
+       "       [ 1.02898619,  1.85760147,  6.8386118 ,  2.41402473,  0.91650002],\n",
+       "       [ 1.02267637,  1.84221172,  6.89546904,  2.37952566,  0.91817465],\n",
+       "       [ 1.0172516 ,  1.81986019,  6.95182997,  2.34943959,  0.92100746],\n",
+       "       [ 1.01259234,  1.7874912 ,  7.00657253,  2.30905785,  0.91090128],\n",
+       "       [ 0.99291676,  1.75813753,  7.05952508,  2.26689771,  0.88812743],\n",
+       "       [ 0.96711245,  1.73133215,  7.11055395,  2.22965179,  0.86893338],\n",
+       "       [ 0.94404465,  1.70754321,  7.15957739,  2.19646   ,  0.85251259],\n",
+       "       [ 0.91746069,  1.68586828,  7.21115863,  2.16644165,  0.83841802],\n",
+       "       [ 0.89121876,  1.66666838,  7.26823916,  2.14003416,  0.82646203],\n",
+       "       [ 0.86783937,  1.64937312,  7.32193772,  2.11642121,  0.81629395],\n",
+       "       [ 0.84703112,  1.6337788 ,  7.37194387,  2.09528441,  0.80766048],\n",
+       "       [ 0.82845196,  1.619701  ,  7.42070575,  2.07634166,  0.80034774],\n",
+       "       [ 0.81184328,  1.6069769 ,  7.46783924,  2.05934486,  0.79417047],\n",
+       "       [ 0.79697877,  1.59523036,  7.51171241,  2.04379341,  0.78898574],\n",
+       "       [ 0.78366252,  1.58481658,  7.5533042 ,  2.03007893,  0.78514158],\n",
+       "       [ 0.77340653,  1.57536934,  7.59178479,  2.01773193,  0.78410497],\n",
+       "       [ 0.76437368,  1.56730639,  7.62890427,  2.00633629,  0.78327866],\n",
+       "       [ 0.75641103,  1.56014926,  7.66385201,  1.99569195,  0.78309295],\n",
+       "       [ 0.74929762,  1.55377904,  7.69675973,  1.98581272,  0.78325254],\n",
+       "       [ 0.7431075 ,  1.54808751,  7.72772336,  1.97708583,  0.78348718],\n",
+       "       [ 0.73764056,  1.5428574 ,  7.75701245,  1.9690422 ,  0.78415382],\n",
+       "       [ 0.73271889,  1.5383076 ,  7.78098988,  1.96195515,  0.78479522],\n",
+       "       [ 0.72844826,  1.53422868,  7.80009362,  1.95555728,  0.78577592],\n",
+       "       [ 0.72457927,  1.53042136,  7.81782859,  1.94960372,  0.78686385],\n",
+       "       [ 0.72121402,  1.5271394 ,  7.83584096,  1.94420011,  0.78783843],\n",
+       "       [ 0.71854269,  1.52403047,  7.8521645 ,  1.93945512,  0.78886011],\n",
+       "       [ 0.71624922,  1.52137747,  7.86797141,  1.93532188,  0.79008917],\n",
+       "       [ 0.71419505,  1.51882628,  7.8824946 ,  1.93156393,  0.7910736 ],\n",
+       "       [ 0.71283686,  1.51649634,  7.89597341,  1.92813104,  0.79328236],\n",
+       "       [ 0.7117556 ,  1.51454548,  7.90862683,  1.92492966,  0.7959553 ],\n",
+       "       [ 0.71078691,  1.5128162 ,  7.92077339,  1.92207644,  0.79869912],\n",
+       "       [ 0.71003406,  1.51137977,  7.93211766,  1.9195065 ,  0.80158876],\n",
+       "       [ 0.7094272 ,  1.51017923,  7.94254787,  1.9171673 ,  0.80451499],\n",
+       "       [ 0.70893209,  1.50910355,  7.95231005,  1.91555613,  0.80717091],\n",
+       "       [ 0.70847636,  1.50819995,  7.96151575,  1.914521  ,  0.8098638 ],\n",
+       "       [ 0.70814046,  1.50740984,  7.97034636,  1.91358558,  0.81227152],\n",
+       "       [ 0.70789298,  1.5065737 ,  7.97838619,  1.91277526,  0.81468439],\n",
+       "       [ 0.70770357,  1.50591279,  7.98587605,  1.9120262 ,  0.8170304 ],\n",
+       "       [ 0.70752166,  1.50536216,  7.99241057,  1.91138883,  0.81925406],\n",
+       "       [ 0.70734296,  1.50487616,  7.99849196,  1.91084915,  0.82119901],\n",
+       "       [ 0.70724307,  1.50444309,  8.00451482,  1.91033293,  0.82327046],\n",
+       "       [ 0.70719344,  1.50391791,  8.01011355,  1.9098903 ,  0.8250587 ],\n",
+       "       [ 0.70714379,  1.50342997,  8.01481494,  1.90951275,  0.826765  ],\n",
+       "       [ 0.70711086,  1.50300182,  8.01992921,  1.90919915,  0.82842365]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lassocv.mse_path_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "203493f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1e12fbf9fa0>"
+       "<matplotlib.collections.PathCollection at 0x1c66a2443e0>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1451,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "7763900d",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "ef83116e",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "5dd5bd7f",
    "metadata": {},
    "outputs": [
